// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders empty tab view 1`] = `
<div
  class="scene scene-with-footer tabsScene hidden"
>
  <main>
    <div
      class="header"
    >
      <img
        alt=""
        id="logo"
        src="logo.png"
      />
      <h2>
        Grouptabs
      </h2>
    </div>
    <div
      class="empty-info"
    >
      <p>
        Track shared expenses in a group of people. Every group has its own tab like "Summer roadtrip" or "Badminton".
      </p>
      <p>
        Start by creating your first tab:
      </p>
    </div>
    <div
      class="row"
    >
      <form
        class="create-form"
      >
        <input
          class="full-width"
          placeholder="Tab name …"
          type="text"
          value=""
        />
        <button
          class="create"
        >
          Create
        </button>
      </form>
    </div>
    <div
      class="row"
    >
      <p
        class="fake-link"
      >
        Open shared tab
      </p>
    </div>
  </main>
  <footer>
    Version: 
    VERSION
     –
     
    <a
      href="https://grouptabs.net/"
      rel="noopener"
      target="_blank"
    >
      grouptabs.net
    </a>
  </footer>
</div>
`;

exports[`renders tab view 1`] = `
<div
  class="scene scene-with-footer tabsScene hidden"
>
  <main>
    <div
      class="header"
    >
      <img
        alt=""
        id="logo"
        src="logo.png"
      />
      <h2>
        Grouptabs
      </h2>
    </div>
    <div
      class="row tabs"
    >
      <button
        class="full-width"
      >
        TAB NAME
      </button>
    </div>
    <div
      class="row"
    >
      <form
        class="create-form"
      >
        <input
          class="full-width"
          placeholder="Tab name …"
          type="text"
          value=""
        />
        <button
          class="create"
        >
          Create
        </button>
      </form>
    </div>
    <div
      class="row"
    >
      <p
        class="fake-link"
      >
        Open shared tab
      </p>
    </div>
  </main>
  <footer>
    Version: 
    VERSION
     –
     
    <a
      href="https://grouptabs.net/"
      rel="noopener"
      target="_blank"
    >
      grouptabs.net
    </a>
  </footer>
</div>
`;
